# rl_sar_go2_deploy

./: README_CN.md
src/rl_sar/: CMakeLists.txt
src/rl_sar/launch/: gazebo_go2_isaacgym.launch
src/rl_sar/scripts/: rl_go2_himloco_real.py  rl_sim.py  unitree_wireless_controller.py
src/rl_sar/scripts/unitree_sdk2py/rpc/: client.py
